<resources>
    <string name="home_page">Home Page</string>
    <string name="app_name">Runnit</string>
    <string name="submit">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="logout">Clock out</string>
    <string name="dismiss">Dismiss</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="confirm">Confirm</string>
    <string name="send">SEND</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="leave_blank_for_basic_message">Leave empty to send a basic message</string>
    <string name="field_is_case_sensitive">Field is case sensitive</string>
    <string name="all_fields_are_case_sensitive">All fields are case sensitive</string>

    <string name="reply_label">reply</string>

    <!-- HINTS -->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>

    <!-- for Drawer view -->
    <string name="drawer_new_account">New Account</string>
    <string name="drawer_login">Login</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_edit_info">Edit Info</string>
    <string name="drawer_verify_sms">Verify Phone</string>
    <string name="drawer_verify_restaurant">Edit Org Code</string>
    <string name="drawer_create_admin_account">Admin</string>
    <string name="drawer_create_channel">Channels</string>
    <string name="drawer_delete_account">Delete Account</string>
    <string name="drawer_list_all_users">Users</string>


    <!-- HOME FRAGMENT -->
    <string name="home_fragment_get_runners">Runners</string>
    <string name="home_fragment_toggle_admin">Toggle</string>
    <string name="home_fragment_reminder">Code</string>

    <!-- SIGNUP FRAGMENT -->
    <string name="signup_header">Create Your Account</string>
    <string name="signup_firstname_hint">First name</string>
    <string name="signup_lastname_hint">Last name</string>
    <string name="signup_submit_button">Submit</string>
    <string name="signup_reset_button">Reset</string>
    <string name="signup_phone_hint_text">Phone Number</string>
    <string name="signup_phone_hint_numbers">(615) 555"&#8211;"1212</string>
    <string name="signup_restaurant_id_hint">Restaurant Id</string>
    <string name="signup_sms_hint">Verification Code</string>

    <string name="phone_number_resend_sms_text">Need another verification code?</string>
    <string name="phone_number_resend_sms_clickable">click here</string>

    <string name="organization_code_org_name_header">Please enter the name of your organization</string>
    <string name="restaurant_code_text_view">Please enter the code provided to you in each field</string>
    <string name="restaurant_code_text_view_admin">Please submit your organization code</string>
    <string name="restaurant_code_hint">123abc</string>
    <string name="organization_code_org_name_hint">Organization name</string>

    <!-- LOGIN FRAGMENT -->
    <string name="login_forgot_password_text">Forgot your password?</string>
    <string name="login_forgot_password_text_clickable">get a new one</string>

    <!-- RESET PASSWORD FRAGMENT -->
    <string name="reset_fragment_welceome">We will send a link to reset your password</string>

    <!-- Create Admin Account Activity -->
    <string name="admin_activity_text">Please enter your organization name and create a code</string>
    <string name="admin_activity_minimum_characters">Code must be at least 6 characters</string>
    <string name="admin_activity_cannot_be_changed">This code can not be changed in the future</string>
    <string name="admin_activity_channel_text">Your org code and channel ID will be identical</string>

    <string name="admin_activity_org_name_hint">Name of Organization</string>
    <string name="admin_activity_text_hint">A123B45</string>
    <string name="admin_activity_query_code">Reminder</string>

    <!-- ADMIN CHANNEL ACTIVITY -->
    <string name="channel_activity_click_channel_to_toggle">Click any channel to activate or deactivate it</string>
    <string name="channel_activity_remove_channel_description">Remove this channel</string>
    <string name="channel_activity_send_notification_description">Send notification</string>
    <string name="channel_activity_see_active_users_description">See active users</string>
    <string name="channel_activity_admin_no_channels">No channels have been created </string>
    <string name="channel_activity_custom_notification_description">Send custom notification</string>

    <!-- Admin channel item -->
    <string name="admin_channel_item_channel_name">Channel Name</string>
    <string name="admin_channel_item_sent_text">Last Sent</string>
    <string name="admin_channel_custom_notification_hint">Empty</string>

    <!-- NEW CHANNEL DIALOG -->
    <string name="channel_dialog_title">Enter the name of your channel</string>
    <string name="channel_dialog_hint">Servers</string>

    <!-- CANCEL CHANGES DIALOG -->
    <string name="cancel_changes_dialog_title">Continue without saving?</string>

    <!-- USER CHANNEL ACTIVITY -->
    <string name="channel_activity_user_no_channels">No channels are available</string>

    <!-- SUBSCRIBED USERS ACTIVITY -->
    <string name="channel_users_activity_header">Click a user to send them a notification</string>
    <string name="channel_users_activity_no_users">No users are subscribed to this channel</string>

    <!-- ALL USERS FRAGMENT -->
    <string name="all_users_fragment_header">Users</string>

    <!-- DELETE ACCOUNT ACTIVITY -->
    <string name="delete_account_activity_header">Enter your password in both fields to continue</string>

    <!-- LOGIN FRAGMENT -->
    <string name="login_fragment_create_new_account">CREATE A NEW ACCOUNT</string>

    <string name="content_description_new_account">Create a new account</string>

    <!-- EDIT PROFILE FRAGMENT -->
    <string name="edit_profile_fragment_header">My Details</string>
    <string name="edit_profile_fragment_go_credentials_text">EDIT CREDENTIALS</string>

    <!-- EDIT CREDENTIALS FRAGMENT -->
    <string name="edit_credentials_fragment_header">My Credentials</string>
    <string name="edit_credentials_fragment_enter_current_email_header">Enter your current email</string>
    <string name="edit_credentials_fragment_enter_new_email_header">Enter your new email</string>
    <string name="edit_credentials_fragment_go_profile_text">EDIT PROFILE</string>
    <string name="edit_credentials_fragment_enter_password_header">Enter your password</string>
    <string name="hint_current_email">current email</string>
    <string name="hint_new_email">new email</string>
    <string name="hint_password">your password</string>
</resources>
