<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.EditCredentialsFragment">

    <include layout="@layout/progress_bar" />

    <TextView
        android:id="@+id/edit_credentials_fragment_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="@dimen/eightDp"
        android:layout_marginEnd="@dimen/eightDp"
        android:layout_marginBottom="@dimen/eightDp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_credentials_fragment_header"
        android:textSize="@dimen/sixteenSP"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_credentials_fragment_current_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/edit_credentials_fragment_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_credentials_fragment_current_email_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_current_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_credentials_fragment_new_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/edit_credentials_fragment_current_email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_credentials_fragment_new_email_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_new_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_credentials_fragment_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/edit_credentials_fragment_new_email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_credentials_fragment_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/edit_credentials_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/edit_credentials_fragment_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/clear_button"
        android:text="@string/confirm"
        android:textColor="@drawable/clear_button_primary_text_color"/>

    <Button
        android:id="@+id/edit_credentials_go_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteenDp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/clear_button"
        android:text="@string/edit_credentials_fragment_go_profile_text"
        android:textColor="@drawable/clear_button_primary_text_color"/>

</android.support.constraint.ConstraintLayout>