<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.EditProfileFragment">

    <include layout="@layout/progress_bar" />

    <TextView
        android:id="@+id/edit_profile_fragment_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="@dimen/eightDp"
        android:layout_marginEnd="@dimen/eightDp"
        android:layout_marginBottom="@dimen/eightDp"
        android:textSize="@dimen/sixteenSP"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_profile_fragment_header"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_profile_fragment_firstname_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_fragment_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_profile_fragment_firstname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/signup_firstname_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_profile_fragment_lastname_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_fragment_firstname_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_profile_fragment_lastname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/signup_lastname_hint"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/edit_profile_fragment_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_fragment_lastname_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/clear_button"
        android:text="@string/submit"
        android:textColor="@drawable/clear_button_primary_text_color"/>

    <TextView
        android:id="@+id/edit_profile_fragment_go_credentials_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteenDp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_profile_fragment_go_credentials_text"
        android:textColor="@drawable/clear_button_primary_text_color"
        android:clickable="true"
        android:focusable="true"/>

</android.support.constraint.ConstraintLayout>