<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_code_main_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RestaurantCodeFragment">

    <TextView
        android:id="@+id/restaurant_code_org_name_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="@dimen/eightDp"
        android:layout_marginEnd="@dimen/eightDp"
        android:layout_marginBottom="@dimen/eightDp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/organization_code_org_name_header"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/organization_code_org_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/restaurant_code_org_name_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/organization_code_org_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/organization_code_org_name_hint"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/restaurant_code_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/organization_code_org_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/restaurant_code_text_view"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/restaurant_code_code_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/restaurant_code_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/restaurant_code_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/restaurant_code_hint"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/restaurant_code_code_two_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/restaurant_code_code_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/restaurant_code_code_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/restaurant_code_hint"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/organization_code_all_fields_case_sensitive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintTop_toBottomOf="@id/restaurant_code_code_two_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/all_fields_are_case_sensitive"/>


    <Button
        android:id="@+id/restaurant_code_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightDp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/clear_button"
        android:text="@string/submit"
        android:textColor="@drawable/clear_button_primary_text_color"/>
</android.support.constraint.ConstraintLayout>